Hecho Varias paginas (Editar inicio, Crear opinion, Ver inicio, Etc)

--- a/public/assets-lpe/scss/lpe.scss
+++ b/public/assets-lpe/scss/lpe.scss
@@ -219,19 +219,25 @@ figure:hover:before {
 .grid-sizer,
 .grid-item {
     border: 2px solid #FFF;
+
+
+
+        background-color: #6f5499;
+background-image: -webkit-gradient(linear,left top,left bottom,from(#563d7c),to(#6f5499));
+background-image: -webkit-linear-gradient(top,#563d7c 0,#6f5499 100%);
+background-image: -o-linear-gradient(top,#563d7c 0,#6f5499 100%);
+background-image: linear-gradient(to bottom,#563d7c 0,#6f5499 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#563d7c', endColorstr='#6F5499', GradientType=0);
     @media (max-width: $screen-xs-max) {
         width: 100%;
-        background-color: #2a2a2a;
         height: 150px;
     }
     @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
         width: 50%;
-        background-color: #2a2a2a;
         height: 200px;
     }
     @media (min-width: $screen-md-min) {
-        width: 25%;
-        background-color: #2a2a2a;
+        width: 20%;
         height: 200px;
     }
 }
@@ -246,8 +252,8 @@ figure:hover:before {
 // AJAJAJA
 
 #body-editor{
-    font-size: 15px;
-    line-height: 20px
+    font-size: 14px;
+    line-height: 21px
 }
 
 
@@ -260,6 +266,61 @@ textarea.form-control.input-lg {
 .bolder{
     font-weight: 700;
 }
+
+#crearDerecho{
+.titulo-derecho-background{
+background-color: #6f5499;
+background-image: -webkit-gradient(linear,left top,left bottom,from(#563d7c),to(#6f5499));
+background-image: -webkit-linear-gradient(top,#563d7c 0,#6f5499 100%);
+background-image: -o-linear-gradient(top,#563d7c 0,#6f5499 100%);
+background-image: linear-gradient(to bottom,#563d7c 0,#6f5499 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#563d7c', endColorstr='#6F5499', GradientType=0);
+background-repeat: repeat-x;
+margin-bottom:40px;
+.overlay{
+    // background: rgba(0,0,0,0.3); 
+    padding: 30px 0;
+}
+textarea{
+    color:#FFF;
+    background-color: none;
+    font-size: 56px;
+    text-align: center;
+text-shadow: 0 1px 0 rgba(0,0,0,.1);
+font-weight: 700;
+line-height: normal;
+resize: none;
+margin: 23px 0 11.5px;
+}
+}
+textarea.accion{
+    font-size: 19.5px;
+    line-height: 27.3px;
+    font-weight: 300;
+    padding:0 0 10px;
+}
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+}
+}
+
+article{
 
 .titulo-derecho-background {
 color: #cdbfe3;
@@ -280,8 +341,6 @@ h1{color:#FFF;}
     padding: 30px 0;
 }
 }
-
-article{
 span.badge{
     background-color: $brand-primary;
 }
@@ -380,4 +439,31 @@ textarea.comentario{
     color: #FFF;
     } 
 
+}
+
+// ------------------------
+
+.editor-area{
+    font-size: 14px;
+}
+
+#modificarInicio{
+    textarea[name=titulo]{
+        font-size:56px;
+        font-weight:700;
+        text-align:center;
+        line-height: 62px;
+        padding:10px;
+        resize:none;
+        margin-bottom:15px;
+        color: #444;
+    }
+    textarea[name=descripcion]{
+    font-size: 19.5px;
+    line-height: 27.3px;
+    font-weight: 300;
+    padding:0 0 10px;
+    text-align: center;
+    resize:none;
+    }
 }
