--- a/views/lpe/derecho/verDerecho.twig
+++ b/views/lpe/derecho/verDerecho.twig
@@ -8,7 +8,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
-                        <h1><strong>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</strong></h1>
+                        <h1><strong>Neque porro quisquam est</strong></h1>
+                        <h6><a href="#" class="btn btn-default"><i class="zmdi zmdi-edit zmdi-hc-lg zmdi-hc-fw"></i>Editar derecho</a> <a href="#" class="btn btn-warning"><i class="zmdi zmdi-close zmdi-hc-lg zmdi-hc-fw"></i>Eliminar</a></h6>
                     </div>
                 </div>
             </div>
@@ -33,11 +34,6 @@
                     <p class="lead">1) Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi sint consequuntur, quibusdam beatae,
                         molestias culpa eveniet debitis unde eum laboriosam similique aliquid nostrum perferendis minima
                         voluptatum, veritatis eaque fuga nobis.</p>
-                    <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante
-                    dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris.
-                    Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent
-                    taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula
-                    in libero. </p>-->
                     <div class="text-center">
                         <h6><b>Importancia de la acción</b></h6>
                         <div class="btn-group btn-group-justified" data-toggle="buttons" style="margin-bottom:20px;">
@@ -100,81 +96,17 @@
                                                 <img src="{{baseUrl()}}/assets/img/anon32.jpg" class="img-circle" style="margin:0 auto 5px" alt="">
                                             </div>
                                             <div class="col-xs-11 col-sm-9">
+                                                <div class="clearfix">
+                                                <span class="pull-left text-info" style="margin-top:0"><strong>Guillermo Croppi</strong></span>
+                                                <div class="pull-right">
+<a href=""><i class="zmdi zmdi-alert-triangle zmdi-hc-fw zmdi-hc-lg"></i>Moderar</a> <a href=""><i class="zmdi zmdi-close zmdi-hc-lg zmdi-hc-fw"></i>Eliminar</a>
+                                                </div>
+                                                </div>
                                                 <p class="comentario">
-                                                    <strong>Guillermo Croppi</strong><br>Lorem ipsum dolor sit amet, consectetur
+                                                    Lorem ipsum dolor sit amet, consectetur
                                                     adipisicing elit. Alias nihil blanditiis reiciendis autem maxime, ducimus
                                                     ullam distinctio explicabo, accusamus ratione, modi delectus commodi
                                                     sed odio officia eius repudiandae facere esse!
-                                                </p>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-xs-1 col-sm-offset-1 text-center">
-                                                <img src="{{baseUrl()}}/assets/img/anon32.jpg" class="img-circle" style="margin:0 auto 5px" alt="">
-                                            </div>
-                                            <div class="col-xs-11 col-sm-9">
-                                                <p class="comentario">
-                                                    <strong>Guillermo Croppi</strong><br>Lorem ipsum dolor sit amet, consectetur
-                                                    adipisicing elit. Alias nihil blanditiis reiciendis autem maxime, ducimus
-                                                    ullam distinctio explicabo, accusamus ratione, modi delectus commodi
-                                                    sed odio officia eius repudiandae facere esse!
-                                                </p>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-xs-1 col-sm-offset-1 text-center">
-                                                <img src="{{baseUrl()}}/assets/img/anon32.jpg" class="img-circle" style="margin:0 auto 5px" alt="">
-                                            </div>
-                                            <div class="col-xs-11 col-sm-9">
-                                                <p class="comentario">
-                                                    <strong>Guillermo Croppi</strong><br>Lorem ipsum dolor sit amet, consectetur
-                                                    adipisicing elit. Alias nihil blanditiis reiciendis autem maxime, ducimus
-                                                    ullam distinctio explicabo,
-                                                    <i class="mdi mdi-comment-multiple-outline" style="font-size: 15px;"></i>                                                    accusamus ratione, modi delectus commodi sed odio officia eius repudiandae
-                                                    facere esse!
-                                                </p>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-xs-1 col-sm-offset-1 text-center">
-                                                <img src="{{baseUrl()}}/assets/img/anon32.jpg" class="img-circle" style="margin:0 auto 5px" alt="">
-                                            </div>
-                                            <div class="col-xs-11 col-sm-9">
-                                                http://localhost:8080/public/lpe/derecho/crear
-                                                <p class="comentario">
-                                                    <strong>Guillermo Croppi</strong><br>Lorem ipsum dolor sit amet, consectetur
-                                                    adipisicing elit. Alias nihil blanditiis reiciendis autem maxime, ducimus
-                                                    ullam distinctio explicabo,
-                                                    <i class="mdi mdi-comment-multiple-outline" style="font-size: 15px;"></i>                                                    accusamus ratione, modi delectus commodi sed odio officia eius repudiandae
-                                                    facere esse!
-                                                </p>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-xs-1 col-sm-offset-1 text-center">
-                                                <img src="{{baseUrl()}}/assets/img/anon32.jpg" class="img-circle" style="margin:0 auto 5px" alt="">
-                                            </div>
-                                            <div class="col-xs-11 col-sm-9">
-                                                <p class="comentario">
-                                                    <strong>Guillermo Croppi</strong><br>Lorem ipsum dolor sit amet, consectetur
-                                                    adipisicing elit. Alias nihil blanditiis reiciendis autem maxime, ducimus
-                                                    ullam distinctio explicabo,
-                                                    <i class="mdi mdi-comment-multiple-outline" style="font-size: 15px;"></i>                                                    accusamus ratione, modi delectus commodi sed odio officia eius repudiandae
-                                                    facere esse!
-                                                </p>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-xs-1 col-sm-offset-1 text-center">
-                                                <img src="{{baseUrl()}}/assets/img/anon32.jpg" class="img-circle" style="margin:0 auto 5px" alt="">
-                                            </div>
-                                            <div class="col-xs-11 col-sm-9">
-                                                <p class="comentario">
-                                                    <strong>Guillermo Croppi</strong><br>Lorem ipsum dolor sit amet, consectetur
-                                                    adipisicing elit. Alias nihil blanditiis reiciendis autem maxime, ducimus
-                                                    ullam distinctio explicabo,
-                                                    <i class="mdi mdi-comment-multiple-outline" style="font-size: 15px;"></i>                                                    accusamus ratione, modi delectus commodi sed odio officia eius repudiandae
-                                                    facere esse!
                                                 </p>
                                             </div>
                                         </div>
@@ -220,6 +152,7 @@
                         </a>
                     </div>
                 </div>
+                <a href="#" class="btn btn-primary btn-block"><i class="zmdi zmdi-plus zmdi-hc-lg zmdi-hc-fw"></i>Nueva Opinion</a>
             </div>
         </div>
 
@@ -234,6 +167,7 @@
                             <div class="overlay text-center">
                                 <!--<img src="https://unsplash.it/300/200/?random" class="img-rounded" style="width:180px" alt="">-->
                                 <h3><small>La opinión de..</small><br><b>Los legisladores</b></h3>
+                                 <h6><a href="#" class="btn btn-default btn-sm"><i class="zmdi zmdi-edit zmdi-hc-lg zmdi-hc-fw"></i>Editar opinion</a> <a href="#" class="btn btn-warning btn-sm"><i class="zmdi zmdi-close zmdi-hc-lg zmdi-hc-fw"></i>Eliminar</a></h6>
                             </div>
                         </div>
                         <hr>
