--- a/public/assets-lpe/css/lpe.css
+++ b/public/assets-lpe/css/lpe.css
@@ -9958,13 +9958,18 @@ figure:hover:before {
 .grid-sizer,
 .grid-item {
   border: 2px solid #FFF;
+  background-color: #6f5499;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#563d7c), to(#6f5499));
+  background-image: -webkit-linear-gradient(top, #563d7c 0, #6f5499 100%);
+  background-image: -o-linear-gradient(top, #563d7c 0, #6f5499 100%);
+  background-image: linear-gradient(to bottom, #563d7c 0, #6f5499 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#563d7c', endColorstr='#6F5499', GradientType=0);
 }
 @media (max-width: 767px) {
   /* line 219, ../scss/lpe.scss */
   .grid-sizer,
   .grid-item {
     width: 100%;
-    background-color: #2a2a2a;
     height: 150px;
   }
 }
@@ -9973,7 +9978,6 @@ figure:hover:before {
   .grid-sizer,
   .grid-item {
     width: 50%;
-    background-color: #2a2a2a;
     height: 200px;
   }
 }
@@ -9981,25 +9985,24 @@ figure:hover:before {
   /* line 219, ../scss/lpe.scss */
   .grid-sizer,
   .grid-item {
-    width: 25%;
-    background-color: #2a2a2a;
+    width: 20%;
     height: 200px;
   }
 }
 
 /* 2 columns */
-/* line 242, ../scss/lpe.scss */
+/* line 248, ../scss/lpe.scss */
 .grid-item--width2 {
   width: 50%;
 }
 
-/* line 248, ../scss/lpe.scss */
+/* line 254, ../scss/lpe.scss */
 #body-editor {
-  font-size: 15px;
-  line-height: 20px;
+  font-size: 14px;
+  line-height: 21px;
 }
 
-/* line 255, ../scss/lpe.scss */
+/* line 261, ../scss/lpe.scss */
 input[type=text].form-control.input-lg, .input-group-lg > input[type=text].form-control,
 .input-group-lg > .input-group-btn > input[type=text].form-control.btn,
 textarea.form-control.input-lg,
@@ -10008,13 +10011,69 @@ textarea.form-control.input-lg,
   font-size: 30px;
 }
 
-/* line 260, ../scss/lpe.scss */
+/* line 266, ../scss/lpe.scss */
 .bolder {
   font-weight: 700;
 }
 
-/* line 264, ../scss/lpe.scss */
-.titulo-derecho-background {
+/* line 271, ../scss/lpe.scss */
+#crearDerecho .titulo-derecho-background {
+  background-color: #6f5499;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#563d7c), to(#6f5499));
+  background-image: -webkit-linear-gradient(top, #563d7c 0, #6f5499 100%);
+  background-image: -o-linear-gradient(top, #563d7c 0, #6f5499 100%);
+  background-image: linear-gradient(to bottom, #563d7c 0, #6f5499 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#563d7c', endColorstr='#6F5499', GradientType=0);
+  background-repeat: repeat-x;
+  margin-bottom: 40px;
+}
+/* line 280, ../scss/lpe.scss */
+#crearDerecho .titulo-derecho-background .overlay {
+  padding: 30px 0;
+}
+/* line 284, ../scss/lpe.scss */
+#crearDerecho .titulo-derecho-background textarea {
+  color: #FFF;
+  background-color: none;
+  font-size: 56px;
+  text-align: center;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+  font-weight: 700;
+  line-height: normal;
+  resize: none;
+  margin: 23px 0 11.5px;
+}
+/* line 296, ../scss/lpe.scss */
+#crearDerecho textarea.accion {
+  font-size: 19.5px;
+  line-height: 27.3px;
+  font-weight: 300;
+  padding: 0 0 10px;
+}
+/* line 302, ../scss/lpe.scss */
+#crearDerecho .btn-file {
+  position: relative;
+  overflow: hidden;
+}
+/* line 306, ../scss/lpe.scss */
+#crearDerecho .btn-file input[type=file] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-width: 100%;
+  min-height: 100%;
+  font-size: 100px;
+  text-align: right;
+  filter: alpha(opacity=0);
+  opacity: 0;
+  outline: none;
+  background: white;
+  cursor: inherit;
+  display: block;
+}
+
+/* line 325, ../scss/lpe.scss */
+article .titulo-derecho-background {
   color: #cdbfe3;
   text-align: center;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
@@ -10022,83 +10081,108 @@ textarea.form-control.input-lg,
   margin-bottom: 40px;
   background-size: cover;
 }
-/* line 277, ../scss/lpe.scss */
-.titulo-derecho-background h1 {
+/* line 338, ../scss/lpe.scss */
+article .titulo-derecho-background h1 {
   color: #FFF;
 }
-/* line 278, ../scss/lpe.scss */
-.titulo-derecho-background .overlay {
+/* line 339, ../scss/lpe.scss */
+article .titulo-derecho-background .overlay {
   background: rgba(0, 0, 0, 0.3);
   padding: 30px 0;
 }
-
-/* line 285, ../scss/lpe.scss */
+/* line 344, ../scss/lpe.scss */
 article span.badge {
   background-color: #2196F3;
 }
-/* line 288, ../scss/lpe.scss */
+/* line 347, ../scss/lpe.scss */
 article #nav-derechos.affix {
   top: 30px;
 }
-/* line 292, ../scss/lpe.scss */
+/* line 351, ../scss/lpe.scss */
 article #nav-derechos > a {
   padding: 10px;
 }
-/* line 295, ../scss/lpe.scss */
+/* line 354, ../scss/lpe.scss */
 article p {
   font-size: 14px;
   line-height: 21px;
 }
-/* line 299, ../scss/lpe.scss */
+/* line 358, ../scss/lpe.scss */
 article img.size32 {
   width: 32px;
 }
-/* line 302, ../scss/lpe.scss */
+/* line 361, ../scss/lpe.scss */
 article p.comentario {
   font-size: 12px;
   line-height: 1.5;
 }
-/* line 306, ../scss/lpe.scss */
+/* line 365, ../scss/lpe.scss */
 article textarea.comentario {
   resize: vertical;
 }
 
-/* line 346, ../scss/lpe.scss */
+/* line 405, ../scss/lpe.scss */
 .tag-opinion {
   padding: 0;
   text-align: center;
 }
-/* line 349, ../scss/lpe.scss */
+/* line 408, ../scss/lpe.scss */
 .tag-opinion img {
   left: 0;
 }
-/* line 353, ../scss/lpe.scss */
+/* line 412, ../scss/lpe.scss */
 .tag-opinion .overlay {
   background: rgba(0, 0, 0, 0.4);
   padding: 15px;
 }
-/* line 357, ../scss/lpe.scss */
+/* line 416, ../scss/lpe.scss */
 .tag-opinion h5 {
   color: #FFF;
 }
-/* line 360, ../scss/lpe.scss */
+/* line 419, ../scss/lpe.scss */
 .tag-opinion a:hover {
   text-decoration: none;
 }
 
-/* line 370, ../scss/lpe.scss */
+/* line 429, ../scss/lpe.scss */
 .header-opinion {
   border-radius: 5px;
   background-size: cover;
   margin-bottom: 20px;
 }
-/* line 374, ../scss/lpe.scss */
+/* line 433, ../scss/lpe.scss */
 .header-opinion .overlay {
   background: rgba(0, 0, 0, 0.4);
   padding: 40px 0 55px;
   border-radius: 5px;
 }
-/* line 379, ../scss/lpe.scss */
+/* line 438, ../scss/lpe.scss */
 .header-opinion h3 {
   color: #FFF;
+}
+
+/* line 446, ../scss/lpe.scss */
+.editor-area {
+  font-size: 14px;
+}
+
+/* line 451, ../scss/lpe.scss */
+#modificarInicio textarea[name=titulo] {
+  font-size: 56px;
+  font-weight: 700;
+  text-align: center;
+  line-height: 62px;
+  padding: 10px;
+  resize: none;
+  margin-bottom: 15px;
+  color: #444;
+}
+/* line 461, ../scss/lpe.scss */
+#modificarInicio textarea[name=descripcion] {
+  font-size: 19.5px;
+  line-height: 27.3px;
+  font-weight: 300;
+  padding: 0 0 10px;
+  text-align: center;
+  resize: none;
 }
